--- a/index.html
+++ b/index.html
@@ -3,112 +3,112 @@
 <html>
 
   <head>
-    <title> Домашнее задание </title>
+    <title> Р”РѕРјР°С€РЅРµРµ Р·Р°РґР°РЅРёРµ </title>
   </head>
 
 	<body>
-	<h1>Список:</h1>
+	<h1>РЎРїРёСЃРѕРє:</h1>
 	<ol>
-		<li><a href="example.html" target="_blank">Главная сайта</a></li> 
-		<li><a href="https://example.com/" target="_blank">Гиперссылка</a></li>
-		<li>Ссылка на файл на сервере FTP<a href="ftp://example.com/myfile.zip"> без авторизации</a></li>
-		<li>Ссылка на файл на сервере FTP<a href="ftp://user:password@example.com/myfile.zip">С авторизацией</a></li>
-		<li><a href="https://yandex.ru#news" target="_blank">Ссылка1</a></li>
-		<li><a href="#Форма">Ссылка2</a></li>
-		<li><a href="https://www.onlinestor.com?product=socks&color=black" target="_blank">Ссылка с URL параметрами</a></li>
+		<li><a href="example.html" target="_blank">Р“Р»Р°РІРЅР°СЏ СЃР°Р№С‚Р°</a></li> 
+		<li><a href="https://example.com/" target="_blank">Р“РёРїРµСЂСЃСЃС‹Р»РєР°</a></li>
+		<li>РЎСЃС‹Р»РєР° РЅР° С„Р°Р№Р» РЅР° СЃРµСЂРІРµСЂРµ FTP<a href="ftp://example.com/myfile.zip"> Р±РµР· Р°РІС‚РѕСЂРёР·Р°С†РёРё</a></li>
+		<li>РЎСЃС‹Р»РєР° РЅР° С„Р°Р№Р» РЅР° СЃРµСЂРІРµСЂРµ FTP<a href="ftp://user:password@example.com/myfile.zip">РЎ Р°РІС‚РѕСЂРёР·Р°С†РёРµР№</a></li>
+		<li><a href="https://yandex.ru#news" target="_blank">РЎСЃС‹Р»РєР°1</a></li>
+		<li><a href="#Р¤РѕСЂРјР°">РЎСЃС‹Р»РєР°2</a></li>
+		<li><a href="https://www.onlinestor.com?product=socks&color=black" target="_blank">РЎСЃС‹Р»РєР° СЃ URL РїР°СЂР°РјРµС‚СЂР°РјРё</a></li>
 		<li><a href=""></a>
 			<ul>
-			<li><a href=https://market.yandex.ru/catalog--elektronika/54440 title="Электроника" target="_blank">Ссылка1</a></li>
-			<li><a href=https://market.yandex.ru/catalog--bytovaia-tekhnika/54419 title="Бытовая техника" target="_blank">Ссылка2</a></li>
-			<li><a href=https://market.yandex.ru/catalog--kompiuternaia-tekhnika/54425 title="Компьютеры" target="_blank">Ссылка3</a></li>
+			<li><a href=https://market.yandex.ru/catalog--elektronika/54440 title="Р­Р»РµРєС‚СЂРѕРЅРёРєР°" target="_blank">РЎСЃС‹Р»РєР°1</a></li>
+			<li><a href=https://market.yandex.ru/catalog--bytovaia-tekhnika/54419 title="Р‘С‹С‚РѕРІР°СЏ С‚РµС…РЅРёРєР°" target="_blank">РЎСЃС‹Р»РєР°2</a></li>
+			<li><a href=https://market.yandex.ru/catalog--kompiuternaia-tekhnika/54425 title="РљРѕРјРїСЊСЋС‚РµСЂС‹" target="_blank">РЎСЃС‹Р»РєР°3</a></li>
 			</ul>
 		</li>
-		<li><a>Ссылка без href</a></li>
-		<li><a href="">ССылка с пустым href</a></li>
-		<li><a href="http://example.ru" rel="nofollow"> Ссылка, по которой запрещен переход поисковикам </a></li>
-		<li><noindex--><a href="http://example.ru"> Ссылка, запрещенная для индексации поисковиками </a></noindex--></li>
-		<li><a id="metka" href="https://kubsu.ru/ru">Ссылка</a></li>
-		<li><p><a href="sample.html"><img src="image.jpg" alt="Цветок" style="width: 600px;"></a></p></li>
-		<li><a href="sample.html"><img src = "image.jpg" alt="Цветок" style="width: 600px;" usemap = "#map">
+		<li><a>РЎСЃС‹Р»РєР° Р±РµР· href</a></li>
+		<li><a href="">РЎРЎС‹Р»РєР° СЃ РїСѓСЃС‚С‹Рј href</a></li>
+		<li><a href="http://example.ru" rel="nofollow"> РЎСЃС‹Р»РєР°, РїРѕ РєРѕС‚РѕСЂРѕР№ Р·Р°РїСЂРµС‰РµРЅ РїРµСЂРµС…РѕРґ РїРѕРёСЃРєРѕРІРёРєР°Рј </a></li>
+		<li><noindex--><a href="http://example.ru"> РЎСЃС‹Р»РєР°, Р·Р°РїСЂРµС‰РµРЅРЅР°СЏ РґР»СЏ РёРЅРґРµРєСЃР°С†РёРё РїРѕРёСЃРєРѕРІРёРєР°РјРё </a></noindex--></li>
+		<li><a id="metka" href="https://kubsu.ru/ru">РЎСЃС‹Р»РєР°</a></li>
+		<li><p><a href="sample.html"><img src="image.jpg" alt="Р¦РІРµС‚РѕРє" style="width: 600px;"></a></p></li>
+		<li><a href="sample.html"><img src = "image.jpg" alt="Р¦РІРµС‚РѕРє" style="width: 600px;" usemap = "#map">
 		<map name = "map">
-		<area shape = "rect" href = "ссылочка" coords = "20 20 120 120"/>
-		<area shape = "circle" href = "ссылочка" coords = "180 70 40"/>
+		<area shape = "rect" href = "СЃСЃС‹Р»РѕС‡РєР°" coords = "20 20 120 120"/>
+		<area shape = "circle" href = "СЃСЃС‹Р»РѕС‡РєР°" coords = "180 70 40"/>
 		</map></a></li>
-		<li><a href="Ссылаемый документ.html">Ссылка1</a></li>
-		<li><a href="about/Ссылаемый документ2.html">Ссылка2</a></li>
-		<li><a href="../Ссылаемый документ3.html">Ссылка3</a></li>
-		<li><a href="../../Ссылаемый документ4.html">Ссылка</a></li>
-		<li><a href="/">Сокращенная ссылка на главную</a></li>
-		<li><a href="/example.html">Сокращенная ссылка на внутреннюю</a></li>
+		<li><a href="РЎСЃС‹Р»Р°РµРјС‹Р№ РґРѕРєСѓРјРµРЅС‚.html">РЎСЃС‹Р»РєР°1</a></li>
+		<li><a href="about/РЎСЃС‹Р»Р°РµРјС‹Р№ РґРѕРєСѓРјРµРЅС‚2.html">РЎСЃС‹Р»РєР°2</a></li>
+		<li><a href="../РЎСЃС‹Р»Р°РµРјС‹Р№ РґРѕРєСѓРјРµРЅС‚3.html">РЎСЃС‹Р»РєР°3</a></li>
+		<li><a href="../../РЎСЃС‹Р»Р°РµРјС‹Р№ РґРѕРєСѓРјРµРЅС‚4.html">РЎСЃС‹Р»РєР°</a></li>
+		<li><a href="/">РЎРѕРєСЂР°С‰РµРЅРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° РіР»Р°РІРЅСѓСЋ</a></li>
+		<li><a href="/example.html">РЎРѕРєСЂР°С‰РµРЅРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° РІРЅСѓС‚СЂРµРЅРЅСЋСЋ</a></li>
 	</ol>
 
-    <h1>Форма</h1>
+    <h1>Р¤РѕСЂРјР°</h1>
 
     <form action="/"
       method="POST">
 
       <label>
-        Введите имя:<br />
+        Р’РІРµРґРёС‚Рµ РёРјСЏ:<br />
         <input name="field-name-1"
-          value="Имя" />
+          value="РРјСЏ" />
       </label><br />
 
       <label>
-       Введите email:<br />
+       Р’РІРµРґРёС‚Рµ email:<br />
         <input name="field-email"
           value="123asd@mail.com"
           type="email" />
       </label><br />
 
       <label>
-        Введите дату рождение:<br />
+        Р’РІРµРґРёС‚Рµ РґР°С‚Сѓ СЂРѕР¶РґРµРЅРёРµ:<br />
         <input name="field-date"
           value="2021-09-12"
           type="date" />
       </label><br />
 
-	Пол:<br />
+	РџРѕР»:<br />
       <label><input type="radio" checked="checked"
-        name="radio-group-1" value="Значение1" />
-        Женский </label>
+        name="radio-group-1" value="Р—РЅР°С‡РµРЅРёРµ1" />
+        Р–РµРЅСЃРєРёР№ </label>
       <label><input type="radio"
-        name="radio-group-1" value="Значение2" />
-        Мужской </label><br />
+        name="radio-group-1" value="Р—РЅР°С‡РµРЅРёРµ2" />
+        РњСѓР¶СЃРєРѕР№ </label><br />
 	
-	Количество конечностей:<br />
+	РљРѕР»РёС‡РµСЃС‚РІРѕ РєРѕРЅРµС‡РЅРѕСЃС‚РµР№:<br />
       <label><input type="radio" checked="checked"
-        name="radio-group-2" value="Значение1" />
-        2 Конечности </label>
+        name="radio-group-2" value="Р—РЅР°С‡РµРЅРёРµ1" />
+        2 РљРѕРЅРµС‡РЅРѕСЃС‚Рё </label>
       <label><input type="radio"
-        name="radio-group-2" value="Значение2" />
-        3 Конечности </label><br />
+        name="radio-group-2" value="Р—РЅР°С‡РµРЅРёРµ2" />
+        3 РљРѕРЅРµС‡РЅРѕСЃС‚Рё </label><br />
       <label><input type = "radio"
-	name="radio-group-2" value="Значение3" />
-	4 конечности </label><br />
+	name="radio-group-2" value="Р—РЅР°С‡РµРЅРёРµ3" />
+	4 РєРѕРЅРµС‡РЅРѕСЃС‚Рё </label><br />
 
       <label>
-        Сверхспособности:
+        РЎРІРµСЂС…СЃРїРѕСЃРѕР±РЅРѕСЃС‚Рё:
         <br />
         <select name="field-name-4[]"
           multiple="multiple">
-          <option value="Значение1" selected="selected">бессмертие</option>
-          <option value="Значение2" selected="selected">прохождение сквозь стены</option>
-          <option value="Значение3" selected="selected">левитация</option>
+          <option value="Р—РЅР°С‡РµРЅРёРµ1" selected="selected">Р±РµСЃСЃРјРµСЂС‚РёРµ</option>
+          <option value="Р—РЅР°С‡РµРЅРёРµ2" selected="selected">РїСЂРѕС…РѕР¶РґРµРЅРёРµ СЃРєРІРѕР·СЊ СЃС‚РµРЅС‹</option>
+          <option value="Р—РЅР°С‡РµРЅРёРµ3" selected="selected">Р»РµРІРёС‚Р°С†РёСЏ</option>
         </select>
       </label><br />
 
 	<label>
-       биография:<br>
-        <textarea name="field-name-2">информация о себе</textarea>
+       Р±РёРѕРіСЂР°С„РёСЏ:<br>
+        <textarea name="field-name-2">РёРЅС„РѕСЂРјР°С†РёСЏ Рѕ СЃРµР±Рµ</textarea>
       </label>
 
-      С контрактом ознакомлен:<br/>
+      РЎ РєРѕРЅС‚СЂР°РєС‚РѕРј РѕР·РЅР°РєРѕРјР»РµРЅ:<br/>
       <label><input type="checkbox" checked="checked"
         name="check-1" />
-        Ознакомлен </label><br/>
+        РћР·РЅР°РєРѕРјР»РµРЅ </label><br/>
 
-      Отправить форму:
-      <input type="submit" value="Отправить" />
+      РћС‚РїСЂР°РІРёС‚СЊ С„РѕСЂРјСѓ:
+      <input type="submit" value="РћС‚РїСЂР°РІРёС‚СЊ" />
     </form>
 
   </body>
