--- a/index1.html
+++ b/index1.html
@@ -9,11 +9,11 @@
       <header>
       <center><div class="logo">
         <a href = "dz2.html"> <img class="graficlogo" src="logo.png" width="350" height="115" alt="Logo"> </a>
-      <p>Домашнее задание</p>
+      <p>Р”РѕРјР°С€РЅРµРµ Р·Р°РґР°РЅРёРµ</p>
       </div></center>
       <nav>
           <div class="topnav" id="myTopnav">
-          <a href="https://yandex.ru">ГЛАВНАЯ YANDEX</a>
+          <a href="https://yandex.ru">Р“Р›РђР’РќРђРЇ YANDEX</a>
           <a href="https://market.yandex.ru">YANDEX MARKET</a> 
           <a href="https://music.yandex.ru">YANDEX MUSIC</a>
           <a href="https://translate.yandex.ru">YANDEX TRANSLATE</a> 
@@ -22,25 +22,25 @@
     </header>
     <div class="links">
     <ol>
-          <li><a href="http://example.com"> Абсолютная гиперссылка на главную страницу example.com </a></li>
-          <li><a href="https://example.com"> Абсолютная на главную сайта example.com в протоколе https </a></li>
-          <li><a href="ftp://ftp.rasla.ru/Pictures/wp_land.jpg"> Ссылка на файл на сервере FTP без авторизации</a></li>
-          <li><a href="ftp://softovichek.ru/16425246.text"> Ссылка на файл на сервере FTP с авторизацией</a></li>
-          <li><a href="http://ochprosto.com/sdelat-ssylku-na-opredelennuyu-chast-stranicy#top">Ссылка на фрагмент страницы некоторого сайта</a></li>
-          <li><a href="#yakor">Cсылка на фрагмент текущей страницы </a></li>
-          <li><a href="https://yandex.ru/search/?lr=35&text=BBC"> Ссылка с двумя параметрами URL</a></li>
-          <li> Навигация по яндекс маркету
+          <li><a href="http://example.com"> РђР±СЃРѕР»СЋС‚РЅР°СЏ РіРёРїРµСЂСЃСЃС‹Р»РєР° РЅР° РіР»Р°РІРЅСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ example.com </a></li>
+          <li><a href="https://example.com"> РђР±СЃРѕР»СЋС‚РЅР°СЏ РЅР° РіР»Р°РІРЅСѓСЋ СЃР°Р№С‚Р° example.com РІ РїСЂРѕС‚РѕРєРѕР»Рµ https </a></li>
+          <li><a href="ftp://ftp.rasla.ru/Pictures/wp_land.jpg"> РЎСЃС‹Р»РєР° РЅР° С„Р°Р№Р» РЅР° СЃРµСЂРІРµСЂРµ FTP Р±РµР· Р°РІС‚РѕСЂРёР·Р°С†РёРё</a></li>
+          <li><a href="ftp://softovichek.ru/16425246.text"> РЎСЃС‹Р»РєР° РЅР° С„Р°Р№Р» РЅР° СЃРµСЂРІРµСЂРµ FTP СЃ Р°РІС‚РѕСЂРёР·Р°С†РёРµР№</a></li>
+          <li><a href="http://ochprosto.com/sdelat-ssylku-na-opredelennuyu-chast-stranicy#top">РЎСЃС‹Р»РєР° РЅР° С„СЂР°РіРјРµРЅС‚ СЃС‚СЂР°РЅРёС†С‹ РЅРµРєРѕС‚РѕСЂРѕРіРѕ СЃР°Р№С‚Р°</a></li>
+          <li><a href="#yakor">CСЃС‹Р»РєР° РЅР° С„СЂР°РіРјРµРЅС‚ С‚РµРєСѓС‰РµР№ СЃС‚СЂР°РЅРёС†С‹ </a></li>
+          <li><a href="https://yandex.ru/search/?lr=35&text=BBC"> РЎСЃС‹Р»РєР° СЃ РґРІСѓРјСЏ РїР°СЂР°РјРµС‚СЂР°РјРё URL</a></li>
+          <li> РќР°РІРёРіР°С†РёСЏ РїРѕ СЏРЅРґРµРєСЃ РјР°СЂРєРµС‚Сѓ
           <ul>
-		<li><a href=https://market.yandex.ru/catalog--elektronika/54440 title="Электроника" target="_blank">Ссылка1</a></li>
-		<li><a href=https://market.yandex.ru/catalog--bytovaia-tekhnika/54419 title="Бытовая техника" target="_blank">Ссылка2</a></li>
-		<li><a href=https://market.yandex.ru/catalog--kompiuternaia-tekhnika/54425 title="Компьютеры" target="_blank">Ссылка3</a></li>
+		<li><a href=https://market.yandex.ru/catalog--elektronika/54440 title="Р­Р»РµРєС‚СЂРѕРЅРёРєР°" target="_blank">РЎСЃС‹Р»РєР°1</a></li>
+		<li><a href=https://market.yandex.ru/catalog--bytovaia-tekhnika/54419 title="Р‘С‹С‚РѕРІР°СЏ С‚РµС…РЅРёРєР°" target="_blank">РЎСЃС‹Р»РєР°2</a></li>
+		<li><a href=https://market.yandex.ru/catalog--kompiuternaia-tekhnika/54425 title="РљРѕРјРїСЊСЋС‚РµСЂС‹" target="_blank">РЎСЃС‹Р»РєР°3</a></li>
           </ul>
 	  </li>
-          <li><a>Ссылка без href </a></li>
-          <li><a href=""> Ссылка с пустым href </a></li>
-          <li><a href="https://example.com" rel="nofollow">Ссылка, по которой запрещен переход поисковиками</a></li>
-          <li><a href="https://example.com"> <!--noindex-->Сслыка, запрещенаня для индексации поисковиками <!--noindex--></a></li>
-          <li><a id="metka" href="https://kubsu.ru/ru">Ссылка</a></li>
+          <li><a>РЎСЃС‹Р»РєР° Р±РµР· href </a></li>
+          <li><a href=""> РЎСЃС‹Р»РєР° СЃ РїСѓСЃС‚С‹Рј href </a></li>
+          <li><a href="https://example.com" rel="nofollow">РЎСЃС‹Р»РєР°, РїРѕ РєРѕС‚РѕСЂРѕР№ Р·Р°РїСЂРµС‰РµРЅ РїРµСЂРµС…РѕРґ РїРѕРёСЃРєРѕРІРёРєР°РјРё</a></li>
+          <li><a href="https://example.com"> <!--noindex-->РЎСЃР»С‹РєР°, Р·Р°РїСЂРµС‰РµРЅР°РЅСЏ РґР»СЏ РёРЅРґРµРєСЃР°С†РёРё РїРѕРёСЃРєРѕРІРёРєР°РјРё <!--noindex--></a></li>
+          <li><a id="metka" href="https://kubsu.ru/ru">РЎСЃС‹Р»РєР°</a></li>
           <li><a href="https://www.twitch.tv"><img src="https://img1.freepng.ru/20180320/xlw/kisspng-amazon-com-twitch-logo-streaming-media-video-on-de-icon-svg-twitch-5ab1919601db75.8691295615215865820076.jpg" alt="Twitch" width="300" height="200"></a></li>
           <li><img src="https://img1.freepng.ru/20180320/xlw/kisspng-amazon-com-twitch-logo-streaming-media-video-on-de-icon-svg-twitch-5ab1919601db75.8691295615215865820076.jpg" alt="KUBSU" width="300" height="200" usemap="#Twitch">
               <map name="Twitch">
@@ -50,32 +50,32 @@
               <area shape="rect" coords="55,55,140,99" href="https://www.twitch.tv" alt="Twitch">
               </map>
           </li>
-          <li><a href="./rus.txt">Относительная ссылка на страницу в текущем каталоге</a></li>
-          <li><a href="./about/abc.txt">Относительная ссылка на страницу в каталоге about</a></li>
-          <li><a href="../photos.jpg">Относительная ссылка на страницу в каталоге уровнем выше текущего</a></li>
-          <li><a href="../../media.mp4">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
-          <li><a href="/">Ссылка, сокращенная на главную</a></li>
-          <li><a href="/main">Ссылка, сокращенная на внутреннюю</a></li>
+          <li><a href="./rus.txt">РћС‚РЅРѕСЃРёС‚РµР»СЊРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° СЃС‚СЂР°РЅРёС†Сѓ РІ С‚РµРєСѓС‰РµРј РєР°С‚Р°Р»РѕРіРµ</a></li>
+          <li><a href="./about/abc.txt">РћС‚РЅРѕСЃРёС‚РµР»СЊРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° СЃС‚СЂР°РЅРёС†Сѓ РІ РєР°С‚Р°Р»РѕРіРµ about</a></li>
+          <li><a href="../photos.jpg">РћС‚РЅРѕСЃРёС‚РµР»СЊРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° СЃС‚СЂР°РЅРёС†Сѓ РІ РєР°С‚Р°Р»РѕРіРµ СѓСЂРѕРІРЅРµРј РІС‹С€Рµ С‚РµРєСѓС‰РµРіРѕ</a></li>
+          <li><a href="../../media.mp4">РћС‚РЅРѕСЃРёС‚РµР»СЊРЅР°СЏ СЃСЃС‹Р»РєР° РЅР° СЃС‚СЂР°РЅРёС†Сѓ РІ РєР°С‚Р°Р»РѕРіРµ РґРІСѓРјСЏ СѓСЂРѕРІРЅСЏРјРё РІС‹С€Рµ</a></li>
+          <li><a href="/">РЎСЃС‹Р»РєР°, СЃРѕРєСЂР°С‰РµРЅРЅР°СЏ РЅР° РіР»Р°РІРЅСѓСЋ</a></li>
+          <li><a href="/main">РЎСЃС‹Р»РєР°, СЃРѕРєСЂР°С‰РµРЅРЅР°СЏ РЅР° РІРЅСѓС‚СЂРµРЅРЅСЋСЋ</a></li>
       </ol>
     </div>
     <div>
       <table>
         <tr>
-          <th>Заголовок 1</th>
-          <th>Заголовок 2</th>
-          <th>Заголовок 3</th>
+          <th>Р—Р°РіРѕР»РѕРІРѕРє 1</th>
+          <th>Р—Р°РіРѕР»РѕРІРѕРє 2</th>
+          <th>Р—Р°РіРѕР»РѕРІРѕРє 3</th>
         </tr>
         <tr>
           <td>1.1</td>
           <td>1.2</td>
-          <td rowspan="2">Строка 1,2</td>
+          <td rowspan="2">РЎС‚СЂРѕРєР° 1,2</td>
         </tr>
         <tr>
           <td>2.1</td>
           <td>2.2</td>
         </tr>
         <tr>
-          <td colspan="2">Столбец 1,2</td>
+          <td colspan="2">РЎС‚РѕР»Р±РµС† 1,2</td>
           <td>2.5</td>
         </tr>
         <tr>
@@ -92,9 +92,9 @@
     </div>
       <br>
       <form id="yakor">
-          <label>Имя:
+          <label>РРјСЏ:
           <br>
-          <input type="text" placeholder="Введите свое имя">
+          <input type="text" placeholder="Р’РІРµРґРёС‚Рµ СЃРІРѕРµ РёРјСЏ">
           </label>
           <br>
           <label>e-mail:
@@ -102,23 +102,23 @@
           <input type="email" placeholder="example@yandex.ru">
           </label>
           <br>
-          <label>Дата рождения:
+          <label>Р”Р°С‚Р° СЂРѕР¶РґРµРЅРёСЏ:
           <br>
           <input type="date" value="2021-09-22">
           </label>
           <br>
-          Пол:
+          РџРѕР»:
           <br>
           <label>
           <input type="radio" name="m or fem">
-          Мужской
+          РњСѓР¶СЃРєРѕР№
           </label>
           <label>
           <input type="radio" name="m or fem">
-          Женский
+          Р–РµРЅСЃРєРёР№
           </label>
           <br>
-          Количество конечностей:
+          РљРѕР»РёС‡РµСЃС‚РІРѕ РєРѕРЅРµС‡РЅРѕСЃС‚РµР№:
           <br>
           <label>
           <label>
@@ -134,29 +134,29 @@
           3
           </label>
           <br>
-          <label>Сверхспособности:
+          <label>РЎРІРµСЂС…СЃРїРѕСЃРѕР±РЅРѕСЃС‚Рё:
           <br>
           <select multiple="multiple">
-              <option>Бессмертие</option>
-              <option>Прохождение сквозь стены</option>
-              <option>Левитация</option>
+              <option>Р‘РµСЃСЃРјРµСЂС‚РёРµ</option>
+              <option>РџСЂРѕС…РѕР¶РґРµРЅРёРµ СЃРєРІРѕР·СЊ СЃС‚РµРЅС‹</option>
+              <option>Р›РµРІРёС‚Р°С†РёСЏ</option>
           </select>
           </label>
           <br>
-          <label>Биография:
+          <label>Р‘РёРѕРіСЂР°С„РёСЏ:
           <br>
-          <textarea placeholder="Обо мне: "></textarea>
+          <textarea placeholder="РћР±Рѕ РјРЅРµ: "></textarea>
           </label>
           <br>
           <label>
           <input type="checkbox">
-          С контрактом ознакомлен
+          РЎ РєРѕРЅС‚СЂР°РєС‚РѕРј РѕР·РЅР°РєРѕРјР»РµРЅ
           </label>
           <br>
-          <input type="button" value="Отправить">
+          <input type="button" value="РћС‚РїСЂР°РІРёС‚СЊ">
       </form>
      <footer>
-       (с) Красношеин Даниил 2021
+       (СЃ) РљСЂР°СЃРЅРѕС€РµРёРЅ Р”Р°РЅРёРёР» 2021
      </footer>
   </body>
 </html>
