--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 	<h1>Список:</h1>
 	<ol>
-		<li><a href="example.html" target="_blank">Главная сайта</a></li> 
+		<li><a href="http://example.com/" target="_blank">Главная сайта</a></li> 
 		<li><a href="https://example.com/" target="_blank">Гиперссылка</a></li>
 		<li>Ссылка на файл на сервере FTP<a href="ftp://example.com/myfile.zip"> без авторизации</a></li>
 		<li>Ссылка на файл на сервере FTP<a href="ftp://user:password@example.com/myfile.zip">С авторизацией</a></li>
