--- a/index5.html
+++ b/index5.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>k.rogachev web5</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>WEB</title>
+    <link rel="stylesheet" type="text/css" href="style5.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
     <header class="container-fluid px-0">
         <div class="container px-0 text-center">
-            <img class="float-left logo1 m-2" src="logo.png" alt="Логотип">
+            <img class="float-left logo1 m-2" src="logo5.png" alt="Логотип">
             <h1 class="pt-4 pt-lg-5">Разработка пользовательского WEB интерфейса</h1>
         </div>
     </header>
