--- a/index5.html
+++ b/index5.html
@@ -49,9 +49,9 @@
                     <img class="w-75 h-50" src="https://www.kubsu.ru/sites/default/files/styles/flexslider_full/public/news/baby_boy_20_0.png?itok=HEhIbBJz" alt="КубГУ" usemap="#University">
                     <map name="University">
                         <area shape="circle" coords="100,100,50" href="https://www.kubsu.ru" alt="circle1">
-                        <area shape="rect" coords="0,0,100,200" href="https://www.kubsu.ru" alt="rect1">
+                        <area shape="rect" coords="0,0,100,200" href="https://yandex.ru/" alt="rect1">
                         <area shape="circle" coords="290,200,100" href="https://www.kubsu.ru" alt="circle2">
-                        <area shape="rect" coords="200,250,250,300" href="https://www.kubsu.ru" alt="rect2">
+                        <area shape="rect" coords="200,250,250,300" href="https://yandex.ru/" alt="rect2">
                     </map>
                 </li>
                 <li><a href="./index.html">Относительная ссылка на страницу в текущем каталоге</a></li>
