--- a/index5.html
+++ b/index5.html
@@ -188,7 +188,7 @@
         </div>
     </div>
     <footer class="container-fluid flex-wrap align-content-center text-center">
-        <p class="pt-5">(C) Рогачев Константин 2020</p>
+        <p class="pt-5">(C)Красношеин Даниил 2021</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
