--- a/index5.html
+++ b/index5.html
@@ -10,8 +10,8 @@
 <body>
     <header class="container-fluid px-0">
         <div class="container px-0 text-center">
-            <img class="float-left logo1 m-2" src="logo5.png" alt="Логотип">
-            <h1 class="pt-4 pt-lg-5">Разработка пользовательского WEB интерфейса</h1>
+            <img class="float-left logo1 m-2" src="logo4.png" alt="Логотип">
+            <h1 class="pt-4 pt-lg-5">WEB</h1>
         </div>
     </header>
     <nav class="container navbar my-3 ss3 text-center">
